# HW6

./: CMakeLists.txt  Diagonalize_Converge.cpp  Diagonalize_Converge.h  Energy.cpp  Energy.h  Fock Matrix.cpp  Fock Matrix.h  KE.cpp  KE.h  Numerical Integration.cpp  Numerical Integration.h  Perform_DFT.cpp  Perform_DFT.h  README.md  basis.cpp  basis.h  main.cpp
